fix issue with MainSection Visibility

--- a/src/scss/Homepage/_mainSection.scss
+++ b/src/scss/Homepage/_mainSection.scss
@@ -17,7 +17,6 @@
     align-items: flex-end;
     width: 100%;
     z-index: 2;
-    background-color: rgba(255, 255, 255, 0.5);
 
     @include desktop {
       margin-right: 90px;
@@ -73,6 +72,10 @@
         color: $color-dark;
         font-size: 1.8rem;
       }
+    }
+    &__link{
+      cursor: pointer;
+
     }
   }
 
