--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -7,6 +7,8 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.60);
+
   &:visited, &:hover, &:active{
     color: inherit;
   }
@@ -33,4 +35,12 @@
 .decoration{
   width: 150px;
   margin: 10px 20px;
+}
+.backgroundFilter {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  background-color: rgba(255, 255, 255, 0.60);
+  height: 100vh;
+  width: 100%;
 }
